# wordle_liu_shirley

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_xl3572/: __init__.py  wordle_xl3572.py
tests/: test_wordle_xl3572.py
