[project]
name = "wordle-xl3572"
version = "1.2.3"
description = ""
authors = [
    {name = "xuanlin-liu",email = "shirley.liu940@gmail.com"}
]
packages = [{ include = "wordle_xl3572", from = "src" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pandas-stubs = "^2.3.2.250926"

[tool.pytest.ini_options]
pythonpath = ["src"]